# td-crt

./: .gitignore  README.md
book/: conf.py  flyback.rst  index.rst  neck.rst  regulation.rst  yoke.rst
td-180v/: README.md  fp-info-cache  power_supply.sch  td-180v-cache.lib  td-180v.kicad_pcb  td-180v.pro  td-180v.sch  td-180v.sch-bak
td-bplus-psu/: td-bplus-psu.kicad_pcb  td-bplus-psu.kicad_pro  td-bplus-psu.kicad_sch
td-bplus-psu-gan/: td-bplus-psu-gan.kicad_pcb  td-bplus-psu-gan.kicad_pro  td-bplus-psu-gan.kicad_sch  td-bplus-psu-gan.kicad_sym
td-bplus-psu-gan/td-bplus-psu-gan.pretty/: Trasphorm_Power_DFN-8L_5x6.kicad_mod
td-combined-remote/: td-combined-remote.kicad_pcb  td-combined-remote.kicad_pro  td-combined-remote.kicad_sch
td-deflect/: CORTEX_DEBUG.lib  README.md  _saved_uc.sch  degauss.kicad_sch  flyback.kicad_sch  fp-info-cache  fp-lib-table  power_supply.kicad_sch  power_supply.sch  rgb.kicad_sch  rgb.sch  sym-lib-table  td-crt.kicad_sym  td-deflect-cache.lib  td-deflect-rescue.lib  td-deflect.kicad_pcb  td-deflect.kicad_pro  td-deflect.kicad_sch  td-deflect.lib  td-deflect.pro  td-deflect.sch  uc.kicad_sch  uc.sch  v_classd.kicad_sch
td-deflect/td-crt-protocol/: Cargo.toml
td-deflect/td-deflect-firmware/: Cargo.toml  flash.sh  memory.x  openocd.cfg  openocd.gdb
td-deflect/td-deflect-firmware/.cargo/: config  config.toml
td-deflect/td-deflect-firmware/src/: adc.rs  horizontal.rs  main.rs  scan_fault.rs  serial.rs  v_class_d.rs
td-deflect/td-deflect-gui/: Cargo.toml
td-deflect/td-deflect-gui/src/: main.rs
td-deflect/td-deflect-gui/src/scope/: imp.rs  mod.rs
td-deflect/td-deflect.pretty/: DIP-30_600_ELL.kicad_mod  LIN-3509.kicad_mod  Murata_6000B.kicad_mod  c220-050-2ae.kicad_mod  monitor_10_8_2p.kicad_mod  sony_monitor_2p.kicad_mod  sony_monitor_3p.kicad_mod  sony_monitor_yoke.kicad_mod
td-hv/: README.md  flyback.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  td-hv-cache.lib  td-hv.dcm  td-hv.kicad_pcb  td-hv.kicad_pro  td-hv.kicad_sch  td-hv.kicad_sym  td-hv.lib  td-hv.pro  td-hv.sch  td-hv.sch-bak
td-hv/td-hv.pretty/: 053X0528-001.kicad_mod  TO-263-7_TabPin8_GeneSiC.kicad_mod
td-neck-294/: td-neck-294.kicad_pcb  td-neck-294.kicad_pro  td-neck-294.kicad_sch
td-neck-294/td-neck.pretty/: D_DO-35_SOD27_P7.62mm_Horizontal_NoK.kicad_mod  GZS8-6-1.kicad_mod  Ohmite_RA-T2X-25E.kicad_mod  monitor_1p.kicad_mod
td-neck-cr31/: td-neck-cr31.kicad_pcb  td-neck-cr31.kicad_pro  td-neck-cr31.kicad_sch  td-neck.kicad_sym
td-neck-cr31/td-neck.pretty/: GZS8-6-1.kicad_mod
td-rgb/: fp-info-cache  fp-lib-table  sym-lib-table  td-rgb-bracket.fcstd  td-rgb-bracket.stl  td-rgb.kicad_pcb  td-rgb.pro  td-rgb.sch
td-rgb/amphenol/: iicd15s13e6gv00lf.igs
td-rgb/snapeda/: 1-1734530-1.lib  1-1734530-1.mod  LT1675CGNPBF.lib  (+1 more)
td-rgbinput/: README.md  color_channel.kicad_sch  color_channel.sch  fp-info-cache  sym-lib-table  td-rgbinput-cache.lib  td-rgbinput.dcm  td-rgbinput.kicad_pcb  td-rgbinput.kicad_pro  td-rgbinput.kicad_sch  td-rgbinput.lib  td-rgbinput.pro  td-rgbinput.sch  td-rgbinput.sch-bak
td-rgbinput-lm1205/: rgb.kicad_sch  td-rgbinput-lm1205.kicad_pcb  td-rgbinput-lm1205.kicad_pro  td-rgbinput-lm1205.kicad_sch
td-rgbinput-remote/: td-rgbinput-remote.kicad_pcb  td-rgbinput-remote.kicad_pro  td-rgbinput-remote.kicad_sch
td-split-rail-psu/: td-split-rail-psu.kicad_pcb  td-split-rail-psu.kicad_pro  td-split-rail-psu.kicad_sch
(+12 files in other folders)
