[package]
authors = ["Thomas Daede <daede003@umn.edu>"]
edition = "2018"
readme = "README.md"
name = "td-deflect-firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
serde-json-core = "0.4.0"
heapless = "0.7"
libm = "0.2.1"

[dependencies.cortex-m-rtic]
version = "1.1.4"

[dependencies.stm32f7]
features = ["stm32f7x2","rt"]
version = "0.15.1"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[[bin]]
name = "td-deflect-firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
