[package]
authors = ["Thomas Daede <daede003@umn.edu>"]
edition = "2018"
readme = "README.md"
name = "td-deflect-firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
serde-json-core = "0.5.1"
heapless = "0.7"
libm = "0.2.1"

[dependencies.td-crt-protocol]
path = "../td-crt-protocol"

[dependencies.rtic]
version = "2.1.1"
features = ["thumbv7-backend"]

[dependencies.stm32g4]
features = ["stm32g474","rt"]
version = "0.15.1"
#path = "../../../stm32-rs/stm32g4"
git = "https://github.com/stm32-rs/stm32-rs-nightlies"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[[bin]]
name = "td-deflect-firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
