[package]
name = "td-deflect-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0"
serde_json = "1.0"

[dependencies.gtk]
version = "0.6"
package = "gtk4"

[dependencies.serde]
version = "1.0"
features = ["derive"]
