[package]
name = "td-deflect-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0"
serde_json = "1.0"
async-channel = "1.9.0"

[dependencies.td-crt-protocol]
path = "../td-crt-protocol"

[dependencies.gtk]
version = "0.7"
package = "gtk4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.plotters]
version = "0.3.5"
default_features = false
features = ["line_series"]

[dependencies.plotters-cairo]
version = "0.5.0"
